--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <!--                    </form>-->
     <!--                </div>-->
     <!--            </div>-->
-    <!--        </section>-->
+    <!--        </section1>-->
 </main>
 <div id="footer">
     <div class="flex-footer">
