--- a/donate.html
+++ b/donate.html
@@ -16,7 +16,7 @@
                     <a href="index.html">HOME</a>
                     <a href="news_and_events.html">NEWS&EVENTS</a>
                     <a href="resources.html">RESOURCES</a>
-                    <a href="donate.html">DONATe</a>
+                    <a href="donate.html">DONAte</a>
                 </div>
             </div>
         </nav>
