added the schedule

--- a/index.html
+++ b/index.html
@@ -88,27 +88,27 @@
         </div>
     </section>
     <section class="schedule_main">
-<!--        <h3>OUR SCHEDULE</h3>-->
-<!--        <table>-->
-<!--            <thead>-->
-<!--            <tr>-->
-<!--                <th>Monday</th>-->
-<!--                <th>Tuesday</th>-->
-<!--                <th>Wednesday</th>-->
-<!--                <th>Thursday</th>-->
-<!--                <th>Friday</th>-->
-<!--                <th> Saturday </th>-->
-<!--            </tr>-->
-<!--            </thead>-->
-<!--            <tbody>-->
-<!--            <tr>-->
-<!--                <td> <P> 2pm - 5pm </P>-->
-<!--                </td>-->
-<!--                <td> <P> N/A </P></td>-->
-<!--                <td><P> 3pm - 5pm </P></td>-->
-<!--                <td><P> 6:30pm - 8pm </P></td>-->
-<!--                <td><P> 2pm - 5pm </P></td>-->
-<!--                <td><P> 1pm - 3pm</P></td>-->
+        <h3>OUR SCHEDULE</h3>
+        <table>
+            <thead>
+            <tr>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+                <th> Saturday </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td> <P> 2pm - 5pm </P>
+                </td>
+                <td> <P> N/A </P></td>
+                <td><P> 3pm - 5pm </P></td>
+                <td><P> 6:30pm - 8pm </P></td>
+                <td><P> 2pm - 5pm </P></td>
+                <td><P> 1pm - 3pm</P></td>
 
             </tr>
             <tr>
