--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
                 <!--                            <td><P>  6PM - 8PM </P></td>-->
                 <!--                            <td><P>  6PM - 8PM </P></td>-->
             </tr>
-            <tr>
-                <td><p> Sabira </p></td>
-                <td>N/A</td>
-                <td>Sabira</td>
-                <td>Nate</td>
-                <td>Sabira</td>
-                <td>Sabira & Nate</td>
+<!--            <tr>-->
+<!--                <td><p> Sabira </p></td>-->
+<!--                <td>N/A</td>-->
+<!--                <td>Sabira</td>-->
+<!--                <td>Nate</td>-->
+<!--                <td>Sabira</td>-->
+<!--                <td>Sabira & Nate</td>-->
             </tr>
 
             </tbody>
