deleted names on the schedule

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <!--                <td>Sabira</td>-->
 <!--                <td>Nate</td>-->
 <!--                <td>Sabira</td>-->
-<!--                <td>Sabira & Nate</td>-->
+<!--                <td>Sabira & Nate</td>->
             </tr>
 
             </tbody>
