deleted names on the schedule

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <!--                            <td><P>  6PM - 8PM </P></td>-->
             </tr>
 <!--            <tr>-->
-<!--                <td><p> Sabira </p></td>-->
+                <td><p> Sabira </p></td>
 <!--                <td>N/A</td>-->
 <!--                <td>Sabira</td>-->
 <!--                <td>Nate</td>-->
