--- a/resources.html
+++ b/resources.html
@@ -14,7 +14,7 @@
                     <a href="index.html">HOME</a>
                     <a href="news_and_events.html">NEWS&EVENTS</a>
                     <a href="#">RESOURCES</a>
-                    <a href="#">DONATE</a>
+                 <!--   <a href="#">DONATE</a>-->
                 </div>
             </div>
         </nav>
