--- a/news_and_events.html
+++ b/news_and_events.html
@@ -140,6 +140,7 @@
                     <img src="` + news[i].picture + `" width="50" height="50"> 
 
                      <form action="https://forms.gle/MGCJ1UCzmtWxWUpy8">
+                     <form action="https://forms.gle/MGCJ1UCzmtWxWUpy8">
                            <button class="event-register-btn">Register now</button>
                      </form>
 
