--- a/news_and_events.html
+++ b/news_and_events.html
@@ -141,6 +141,7 @@
 
                      <form action="https://forms.gle/MGCJ1UCzmtWxWUpy8">
                      <form action="https://forms.gle/MGCJ1UCzmtWxWUpy8">
+                     <form action="https://forms.gle/MGCJ1UCzmtWxWUpy8">
                            <button class="event-register-btn">Register now</button>
                      </form>
 
