--- a/news_and_events.html
+++ b/news_and_events.html
@@ -136,8 +136,12 @@
 
 
                     <span class="event-time">`+ news[i].date_created + `</span>
-                    <p class="event-desc">` + news[i].description + `<a href="#">Read more</a></p>
-                    <img src="` + news[i].picture + `" width="50" height="50"> 
+                    <div>
+                      <div style="display: inline-block; width: 80%;">
+                        <p class="event-desc">` + news[i].description + `<a href="#">Read more</a></p>
+                      </div>
+                      <img src="` + news[i].picture + `" width="50" height="50" style="display: inline-block; margin-left: 20px;">
+                    </div>
 
                      <form action="https://forms.gle/MGCJ1UCzmtWxWUpy8"> //
             
