--- a/news_and_events.html
+++ b/news_and_events.html
@@ -143,7 +143,7 @@
                       <img src="` + news[i].picture + `" width="50" height="50" style="display: inline-block; margin-left: 20px;">
                     </div>
 
-                     <form action="https://forms.gle/MGCJ1UCzmtWxWUpy8"> //
+                     <form action="https://forms.gle/MGCJ1UCzmtWxWUpy8">
             
                     
                            <button class="event-register-btn">Register now</button>
