--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <td> <P> 8-10am </P></td>
                 <td><P> N/A </P></td>
                 <td><P> 8-10am </P></td>
-                <td><P> N/A</P></td>
-                <td><P> 1pm - 3pm</P></td>
+                <td><P> 1-3pm</P></td>
+                <td><P> By appoitment/P></td>
 
             </tr>
             <tr>
