--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
                 <td><P> N/A </P></td>
                 <td><P> 8-10am </P></td>
                 <td><P> 1-3pm</P></td>
-                <td><P> By appoitment/P></td>
+                <td><P> By appoitment> </P></td>
 
             </tr>
             <tr>
-                <td><p> Sabira </p></td>
+                <td><p> N/A </p></td>
+                <td>Sabira & Soon </td>
                 <td>N/A</td>
                 <td>Sabira</td>
-                <td>Nate</td>
                 <td>Sabira</td>
-              <td>Sabira & Nate</td>
+              <td>Sabira & Soon</td>
             </tr>
 
             </tbody>
