Small type, address #7

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body onload="currentSlide(1)">
 <header>
     <nav>
-        <h1> Berea College Makerspace</h1>
+        <h1> Berea College's Makerspace</h1>
         <div class="topnav">
             <div class="nav-menu">
                 <a href="index.html">HOME</a>
