Changed title of resources page to Resources

--- a/resources.html
+++ b/resources.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Resources</title>
     <link rel="stylesheet" href="resources.css">
 </head>
 <body onload="renderResources()">
