Changed the location address to the updated one

--- a/resources.html
+++ b/resources.html
@@ -60,8 +60,9 @@
         <div class="flex-footer">
             <div id="flex-footer-el-1">
                 <div class="college-name">BEREA COLLEGE</div>
-                <div class="address-line">101 CHESTNUT STREET</div>
-                <div class="address-line">BEREA, KENTUCKY 40403</div>
+                <div class="address-line">DANFORTH TECHNOLOGY BUILDING</div>
+                <div class="address-line">126 N. MAIN ST</div>
+                <div class="address-line">BEREA, KY 40404</div>
                 <div class="phone">+1 859-985-3000</div>
             </div>
             <div id="flex-footer-el-2">
