removed news and events page from header

--- a/news_and_events.html
+++ b/news_and_events.html
@@ -14,7 +14,7 @@
       <div class="topnav">
         <div class="nav-menu">
           <a href="index.html">HOME</a>
-          <a href="news_and_events.html">NEWS&EVENTS</a>
+          <!-- <a href="news_and_events.html">NEWS&EVENTS</a> -->
           <a href="resources.html">RESOURCES</a>
 <!--          <a href="#">DONATE</a>-->
         </div>
