--- a/resources.html
+++ b/resources.html
@@ -12,9 +12,9 @@
             <div class="topnav">
                 <div class="nav-menu">
                     <a href="index.html">HOME</a>
-                    <a href="news_and_events.html">NEWS&EVENTS</a>
+                    <!-- <a href="news_and_events.html">NEWS&EVENTS</a> -->
                     <a href="#">RESOURCES</a>
-                 <!--   <a href="#">DONATE</a>-->
+                    <!--   <a href="#">DONATE</a>-->
                 </div>
             </div>
         </nav>
