--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="topnav">
             <div class="nav-menu">
                 <a href="index.html">HOME</a>
-                <a href="news_and_events.html">NEWS&EVENTS</a>
+                <!-- <a href="news_and_events.html">NEWS&EVENTS</a> -->
                 <a href="resources.html">RESOURCES</a>
 <!--                <a href="donate.html">DONATE</a>-->
             </div>
