Updated Schedule issue #4

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </section>
     <section class="schedule_main">
-        <h3>OUR SCHEDULE</h3>
+        <h3>Spring 2023 Student Staff Schedule</h3>
         <table>
             <thead>
             <tr>
@@ -102,22 +102,23 @@
             </thead>
             <tbody>
             <tr>
-                <td> <P> N/A </P>
+                <td> <P> 4:30 am  - 6:30 am </P>
                 </td>
-                <td> <P> 8-10am </P></td>
-                <td><P> N/A </P></td>
-                <td><P> 8-10am </P></td>
-                <td><P> 1-3pm</P></td>
-                <td><P> By appoitment> </P></td>
-
+                <td> <P> By Appointment </P></td>
+                <td><P> By Appointment </P></td>
+                <td><P> 6:00 pm - 8:00 pm </P></td>
+                <td><P> 3:00 pm - 7:00 pm </P></td>
+                <td><P> By Appointment </P></td>
+                <td><p> 7:00 pm - 9:00 pm</p></td>
             </tr>
             <tr>
-                <td><p> N/A </p></td>
-                <td>Sabira & Soon </td>
-                <td>N/A</td>
-                <td>Sabira</td>
-                <td>Sabira</td>
-              <td>Sabira & Soon</td>
+                <td><p> Mercy & Soon </p></td>
+                <td> N/A </td>
+                <td> N/A</td>
+                <td> Mercy,Soon & Alys</td>
+                <td>  Mercy,Soon & Alys</td>
+                <td> N/A</td>
+                <td> Mercy</td>
             </tr>
 
             </tbody>
@@ -225,7 +226,7 @@
 <div id="footer">
     <div class="flex-footer">
         <div id="flex-footer-el-1">
-            <div class="contact-us"> CONTACT US</div>
+         
             <div class="college-name">BEREA COLLEGE</div>
             <div class="address-line">DANFORTH TECHNOLOGY BUILDING</div>
             <div class="address-line">126 N. MAIN ST</div>
@@ -234,7 +235,7 @@
             <div class="email"> bereacollegemakerspace@gmail.com </div>
         </div>
         <div id="flex-footer-el-2">
-            <div>FOLLOW US</div>
+            <div>CONTACT US</div>
             <!--<span class="circle"></span>
             <span class="circle"></span> <div>
             <span class="circle"></span>-->
