--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
         </div>
     </section>
     <section class="schedule_main">
+
+        <img src = "C:\Users\dixita\source\repos\bereacollegemakerspace.github.io\Makerspace\img\TA Schedule.png" alt= "Spring 2023 TA schedule" >
+
+
         /*
 <!--        <h3>Spring 2023 Student Staff Schedule</h3>
 
