Added TA Schedule image

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
     <section class="schedule_main">
 
-        <img src = "C:\Users\dixita\source\repos\bereacollegemakerspace.github.io\Makerspace\img\TA Schedule.png" alt= "Spring 2023 TA schedule" >
+        <img src = "C:\Users\dixita\source\repos\bereacollegemakerspace.github.io\Makerspace\img\TA Schedule.png" alt= "Spring 2023 TA schedule" widht="1000" height= "333.5">
 
 
         
