Aligned footer heading and logi issue #15

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <div id="footer">
     <div class="flex-footer">
         <div id="flex-footer-el-1">
-            <div class="logo" style="text"> <img src="C:\Users\dixita\source\repos\bereacollegemakerspace.github.io\Makerspace\img\Duck.png"  width="100" height="100"/> BEREA COLLEGE MAKERSPACE</div>
+            <div class="logo" style="te"> <img src="C:\Users\dixita\source\repos\bereacollegemakerspace.github.io\Makerspace\img\Duck.png"  width="100" height="100" align="middle"/> BEREA COLLEGE MAKERSPACE</div>
            
            
         </div>
