Added new menu options issue #16

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
                 <a href="index.html">HOME</a>
                 <!-- <a href="news_and_events.html">NEWS&EVENTS</a> -->
                 <a href="resources.html">RESOURCES</a>
-<!--                <a href="donate.html">DONATE</a>-->
+                <a href="news_and_events.html">NEWS AND EVENTS</a>
+                <a href="">BOOK APPOINTMENT</a>
+                <a href=""> GALLERY</a>
+                <!--                <a href="donate.html">DONATE</a>-->
             </div>
         </div>
     </nav>
