--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body onload="currentSlide(1)">
 <header>
     <nav>
-        <h1> Berea College Makerspace</h1>
+        
         <div class="topnav">
             <div class="nav-menu">
+                <img src="C:\Users\dixita\source\repos\bereacollegemakerspace.github.io\Makerspace\img\Duck.png"  width="100" height="100" align="middle" />
                 <a href="index.html">HOME</a>
                 <!-- <a href="news_and_events.html">NEWS&EVENTS</a> -->
                 <a href="resources.html">RESOURCES</a>
@@ -27,6 +28,7 @@
     </nav>
 </header>
 <main>
+    <h2> Berea College Makerspace</h2>
     <section class="purpose_main">
         <div class="container">
             <div class="purpose-left">
@@ -92,50 +94,50 @@
     </section>
     <section class="schedule_main">
 
-        <img src = "C:\Users\dixita\source\repos\bereacollegemakerspace.github.io\Makerspace\img\TA Schedule.png" alt= "Spring 2023 TA schedule" widht="1000" height= "333.5">
+        <img src="C:\Users\dixita\source\repos\bereacollegemakerspace.github.io\Makerspace\img\TA Schedule.png" alt="Spring 2023 TA schedule" widht="1000" height="333.5">
 
 
-        
-<!--        <h3>Spring 2023 Student Staff Schedule</h3>
 
-            <table>
-                <thead>
-                <tr>
-                    <th> Monday</th>
-                    <th> Tuesday</th>
-                    <th> Wednesday</th>
-                    <th> Thursday</th>
-                    <th> Friday</th>
-                    <th> Saturday </th>
-                    <th> Sunday</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td> <P> 4:30 pm  - 6:30 pm </P>
-                    </td>
-                    <td> <P> By Appointment </P></td>
-                    <td><P> By Appointment </P></td>
-                    <td><P> 6:00 pm - 8:00 pm </P></td>
-                    <td><P> 3:00 pm - 7:00 pm </P></td>
-                    <td><P> By Appointment </P></td>
-                    <td><p> 7:00 pm - 9:00 pm</p></td>
-                </tr>
-                <tr>
-                    <td><p> Mercy & Soon </p></td>
-                    <td> N/A </td>
-                    <td> N/A</td>
-                    <td> Mercy,Soon & Alys</td>
-                    <td>  Mercy,Soon & Alys</td>
-                    <td> N/A</td>
-                    <td> Mercy</td>
-                </tr>
+        <!--        <h3>Spring 2023 Student Staff Schedule</h3>
 
-                </tbody>
-     <!--        </table>
-     <!--    </section>
+                    <table>
+                        <thead>
+                        <tr>
+                            <th> Monday</th>
+                            <th> Tuesday</th>
+                            <th> Wednesday</th>
+                            <th> Thursday</th>
+                            <th> Friday</th>
+                            <th> Saturday </th>
+                            <th> Sunday</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td> <P> 4:30 pm  - 6:30 pm </P>
+                            </td>
+                            <td> <P> By Appointment </P></td>
+                            <td><P> By Appointment </P></td>
+                            <td><P> 6:00 pm - 8:00 pm </P></td>
+                            <td><P> 3:00 pm - 7:00 pm </P></td>
+                            <td><P> By Appointment </P></td>
+                            <td><p> 7:00 pm - 9:00 pm</p></td>
+                        </tr>
+                        <tr>
+                            <td><p> Mercy & Soon </p></td>
+                            <td> N/A </td>
+                            <td> N/A</td>
+                            <td> Mercy,Soon & Alys</td>
+                            <td>  Mercy,Soon & Alys</td>
+                            <td> N/A</td>
+                            <td> Mercy</td>
+                        </tr>
 
-    <!--     <section class="schedule_main">-->
+                        </tbody>
+             <!--        </table>
+             <!--    </section>
+
+            <!--     <section class="schedule_main">-->
         <!--         <h3>OUR SCHEDULE</h3>-->
         <!--         <input id="userinput" type="text " placeholder="enter items">-->
         <!--         <button class="enter"> Enter </button>-->
