Removed "Our Vision" from the website.  issue #4

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="topnav">
             <div class="nav-menu">
                 <img src="C:\Users\dixita\source\repos\bereacollegemakerspace.github.io\Makerspace\img\Duck.png"  width="100" height="100" align="middle" />
-                <a href="index.html">HOME</a>
+                <a href="index.html" style="text-align:right">HOME</a>
                 <!-- <a href="news_and_events.html">NEWS&EVENTS</a> -->
                 <a href="resources.html">RESOURCES</a>
                 <a href="news_and_events.html">NEWS AND EVENTS</a>
-                <a href="">BOOK APPOINTMENT</a>
+                <a href="" style="text-align:left">BOOK APPOINTMENT</a>
                 <a href=""> GALLERY</a>
                 <!--                <a href="donate.html">DONATE</a>-->
             </div>
@@ -35,8 +35,11 @@
                 <div class="purpose-left-text">
                     <h3>OUR PURPOSE</h3>
                     <p>This makerspace is a flexible, hands-on environments that supports self-directed and collaborative projects involving computational design methods beyond the desktop, from building interactive artistic installations, to designing physical computing interfaces, to investigating transdisciplinary applications like bio-hacking and citizen science</p>
-                    `   <h3> OUR VISION </h3>
-                    <p> This makerspace is a flexible, hands-on environments that supports self-directed and collaborative projects involving computational design methods beyond the desktop, from building interactive artistic installations, to designing physical computing interfaces, to investigating transdisciplinary applications like bio-hacking and citizen science</p>
+                    `
+
+                    <!--               <h3> OUR VISION </h3>
+                        <p> This makerspace is a flexible, hands-on environments that supports self-directed and collaborative projects involving computational design methods beyond the desktop, from building interactive artistic installations, to designing physical computing interfaces, to investigating transdisciplinary applications like bio-hacking and citizen science</p>
+                    -->
                 </div>
             </div>
             <div class="slideshow-container">
