CHANGED heading 2 issue #4

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="purpose-left">
                 <div class="purpose-left-text">
-                    <h3>About us</h3>
+                    <h3>OUR MISSION</h3>
                     <p>This makerspace is a flexible, hands-on environment that supports self-directed and collaborative projects involving computational design methods beyond the desktop, from building interactive artistic installations, to designing physical computing interfaces, to investigating transdisciplinary applications like bio-hacking and citizen science</p>
                     `
 
