--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
     </nav>
 </header>
 <main>
-    <h2 style="color:#075988;" >Berea College </h2>
-    <h2 style="color:#075988;" > Makerspace</h2>
-
+    <h1 style="color:#075988; text-align: left" >Berea College Makerspace </h1>
+   
     
     <section class="purpose_main">
         <div class="container">
@@ -94,8 +93,8 @@
                           <img src="https://lh3.googleusercontent.com/zlhK5g7EvLYtXSiZvnbIJvMfT9dGWYiW_Jkh_ig3sSnQ8-Y2l743YWeDyYtcE4uzqAcZaH-GMPBNzaUx-PkE2Z-_PA4KWbekWtQGjIwTJ3vW1QvLthMBo87l8gDXm95cg4y92Gy7Sw=w2400?source=screenshot.guru" alt="">
                       </div>
                       <!-- Next and previous buttons -->
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    <!--<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
                 </div>
             </div>
     </section> 
