changed position of ta schedule

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     </nav>
 </header>
 <main>
-    <h1 style="color:#075988; text-align: left" >Berea College Makerspace </h1>
-   
+    <h2 style="color:#075988;" >Berea College </h2>
+    <h2 style="color:#075988;" > Makerspace</h2>
+
+ 
     
     <section class="purpose_main">
         <div class="container">
