--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </section> 
     <section class="schedule_main">
 
-        <img src="img/TA Schedule.png" alt="Spring 2023 TA schedule" widht="1000" height="333.5">
+        <img src="img/TA Schedule.png" alt="Spring 2023 TA schedule"  widht="1000" height="333.5" />
 
 
 
