Updated Resources Nav menu issue #4

--- a/index.html
+++ b/index.html
@@ -247,13 +247,13 @@
 <div id="footer">
     <div class="flex-footer">
         <div id="flex-footer-el-1">
-            <div class="logo" style="te"> <img src="img\Duck.png"  width="100" height="100" align="middle"/> BEREA COLLEGE MAKERSPACE</div>
+            <div class="logo" style="te"> <img src="img\Duck.png"  width="100" height="100" align="middle"/> <b>BEREA COLLEGE MAKERSPACE </b></div>
            
            
         </div>
         <div id="flex-footer-el-2">
             <div><b>CONTACT US</b></div>
-            <div class="phone">   +1 859-985-3000</div>
+            <div class="phone" >   +1 859-985-3000</div>
             <div class="email"> bereacollegemakerspace@gmail.com </div>
             <div class="college-name">Berea College</div>
             <div class="address-line">Danforth Technology Building</div>
