--- a/resources.html
+++ b/resources.html
@@ -8,18 +8,18 @@
 <body onload="renderResources()">
     <header>
         <nav>
-            <h1>MAKERSPACE LAB</h1>
             <div class="topnav">
                 <div class="nav-menu">
-                    <a href="index.html">HOME</a>
-                   
-                    <a href=" resources.html">RESOURCES</a>
-                   
+                    <img src="img/Duck.png" width="100" height="100" align="middle" />
+                    <a href="index.html" style="text-align:right">HOME</a>
+
+                    <a href=" resources.html"> RESOURCES</a>
                 </div>
             </div>
         </nav>
     </header>
     <main>
+        <h1 style="color:#075988; text-align: left;"> <b>Makerspace Lab Resources</b> </h1>
         <section class="resources_section">
             <div id="resourceContainer">
 
