--- a/resources.html
+++ b/resources.html
@@ -59,8 +59,11 @@
 <div id="footer">
     <div class="flex-footer">
         <div id="flex-footer-el-1">
-            <div class="logo" style="te"> <img src="img\Duck.png" width="100" height="100" align="middle" /> <b>BEREA COLLEGE MAKERSPACE </b></div>
-
+            <div class="logo"> <img src="img\Duck.png" width="100" height="100" align="middle" /> <b>BEREA COLLEGE MAKERSPACE </b></div>
+            <div id="footer-links">
+                <div class="home"><a href= "index.html" style="text-align: right; color: white; padding: 100px">HOME</a> </div>
+                <div class="resources"> <a href=" resources.html" style="text-align:right; color:white; padding:100px"> RESOURCES</a></div>
+            </div>
 
         </div>
         <div id="flex-footer-el-2">
