final commit for today issue #6

--- a/index.html
+++ b/index.html
@@ -248,10 +248,9 @@
     <div class="flex-footer">
         <div id="flex-footer-el-1">
             <div class="logo" style="te"> <img src="img\Duck.png" width="100" height="100" align="middle" /> <b>BEREA COLLEGE MAKERSPACE </b></div>
-            <div id="footer-links">
-                <div class="home"><a href="index.html" style="text-align: right; color: white; padding: 100px">HOME</a> </div>
-                <div class="resources"> <a href=" resources.html" style="text-align:right; color:white; padding:100px"> RESOURCES</a></div>
-            </div>
+            <div class="home"><a href="index.html" style="text-align: right; color: white; padding: 100px">HOME</a> </div>
+            <div class="resources13"> <a href="resources.html" style="text-align:right; color:white; padding:100px"> RESOURCES</a></div>
+           
         </div>
         <div id="flex-footer-el-2">
             <div><b>CONTACT US</b></div>
