Formatted the footer issue #15

--- a/index.html
+++ b/index.html
@@ -119,16 +119,16 @@
     <div id="footer">
         <div class="flex-footer">
             <div id="flex-footer-el-1">
-                <div class="logo" style="te"> <img src="img\Duck.png" width="100" height="100" align="middle" /> <b>BEREA COLLEGE MAKERSPACE </b></div>
-                <div class="home"><a href="index.html" style="text-align: right; color: white; padding: 100px">HOME</a> </div>
-                <div class="resources13"> <a href="resources.html" style="text-align:right; color:white; padding:100px"> RESOURCES</a></div>
+                <div class="logo" style="font-size:25px;"> <img src="img\Duck.png" width="100" height="100" align="middle" /> <b>BEREA COLLEGE MAKERSPACE </b></div>
+                <div class="home"><a href="index.html" style="text-align: right; color: white; padding: 109px">HOME</a> </div>
+                <div class="resources13"> <a href="resources.html" style="text-align:right; color:white; padding:109px"> RESOURCES</a></div>
 
             </div>
             <div id="flex-footer-el-2">
-                <div><b>CONTACT US</b></div>
-                <div class="phone">   +1 859-985-3000</div>
-                <div class="email"> bereacollegemakerspace@gmail.com </div>
-                <div class="college-name">Berea College</div>
+                <div style="font-size:25px"><b>CONTACT US</b></div>
+                <div class="phone"> Phone: +1 859-985-3000</div>
+                <div class="email"> Email: bereacollegemakerspace@gmail.com </div>
+                <div class="college-name">Address: Berea College</div>
                 <div class="address-line">Danforth Technology Building</div>
                 <div class="address-line">126 N. Main St</div>
                 <div class="address-line">Berea, KY 40404</div>
