--- a/resources.html
+++ b/resources.html
@@ -40,51 +40,54 @@
                     let resourceContainer = document.getElementById("resourceContainer");
                     for (let i = 0; i < resources.length; i++) {
                         resourceContainer.innerHTML += `
-                    <div class="container">
-                        <div class="flex-left">
-                            <h3>` + resources[i].title + `</h3>
-                            <img src="`+ resources[i].image + `" alt="picture">
-                        </div>
-                        <div class="flex-right">
-                            <p class="right-desc">`+ resources[i].description + `</p>
-                            <form action="https://forms.gle/YAFNM6VkJ1RztLpE6">
-                                <button class="resource-signup-btn">Sign up</button>
-                            </form>
-                            <form action="https://drive.google.com/file/d/1FRGu3IZK1Vzd5dPeTjfgYOC0jcVOMaGq/view?usp=sharing">
-                                <button class="resource-tutorial-btn"> Watch Tutorial</button>
-                            </form>
-                    </div>`
+                        <div class="container">
+                            <div class="flex-left">
+                                <h3>` + resources[i].title + `</h3>
+                                <img src="`+ resources[i].image + `" alt="picture">
+                            </div>
+                            <div class="flex-right">
+                                <p class="right-desc">`+ resources[i].description + `</p>
+                                <form action="https://forms.gle/YAFNM6VkJ1RztLpE6">
+                                    <button class="resource-signup-btn">Sign up</button>
+                                </form>
+                                <form action="https://drive.google.com/file/d/1FRGu3IZK1Vzd5dPeTjfgYOC0jcVOMaGq/view?usp=sharing">
+                                    <button class="resource-tutorial-btn"> Watch Tutorial</button>
+                                </form>
+                        </div>`
 
                     }
                 });
         }
     </script>
- 
+
 
     <div id="footer">
         <div class="flex-footer">
             <div id="flex-footer-el-1">
-                <div class="logo"> <img src="img\Duck.png" width="100" height="100" align="middle" /> <b>BEREA COLLEGE MAKERSPACE </b></div>
-                <div id="footer-links">
-                    <div class="home"><a href="index.html" style="text-align: right; color: white; padding: 100px">HOME</a> </div>
-                    <div class="resources"> <a href="resources.html" style="text-align:right; color:white; padding:100px"> RESOURCES</a></div>
-                </div>
+                <div class="logo" style="font-size:25px;"> <img src="img\Duck.png" width="100" height="100" align="middle" /> <b>BEREA COLLEGE MAKERSPACE </b></div>
+                <div class="home"><a href="index.html" style="text-align: right; color: white; padding: 109px">HOME</a> </div>
+                <div class="resources13"> <a href="resources.html" style="text-align:right; color:white; padding:109px"> RESOURCES</a></div>
 
             </div>
             <div id="flex-footer-el-2">
-                <div><b>CONTACT US</b></div>
-                <div class="phone">   +1 859-985-3000</div>
-                <div class="email"> bereacollegemakerspace@gmail.com </div>
-                <div class="college-name">Berea College</div>
-                <div class="address-line">Danforth Technology Building</div>
-                <div class="address-line">126 N. Main St</div>
-                <div class="address-line">Berea, KY 40404</div>
+                <div style="font-size:25px"><b>CONTACT US</b></div>
+                <div class="phone" style="display:flex;flex-wrap:wrap">
 
-                <!--<span class="circle"></span>
-                <span class="circle"></span> <div>
-                <span class="circle"></span>-->
+                    <img src="img/Phone.png" width="25" height="25" align="middle" />
 
-                <div style="display:flex;flex-wrap:wrap" ;>
+
+                    Phone: +1 859-985-3000
+
+                </div>
+                <div class="email"><img src="img/email.png" width="25" height="25" align="middle" />  Email: bereacollegemakerspace@gmail.com </div>
+                <div class="college-name"><img src="img/add.png" width="25" height="25" align="middle" />  Address: Berea College</div>
+                <div class="address-line" style="padding-left:130px">Danforth Technology Building</div>
+                <div class="address-line" style="padding-left:130px">126 N. Main St</div>
+                <div class="address-line" style="padding-left:130px">Berea, KY 40404</div>
+
+
+
+                <div style="display:flex;flex-wrap:wrap; padding-left:130px">
                     <a href="https://www.instagram.com/bcmakerspace/?hl=en" target="_blank" rel="noopener noreferrer" style="text-decoration:none;border:0;width:70px;height:36px;padding:2px;margin:5px;color:deepskyblue;border-radius:50%;background-color:#0d2744;">
                         <svg class="niftybutton-instagram" style="display:block;fill:currentColor" data-tag="ins" data-name="Instagram" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet">
                             <path d="M256 109.3c47.8 0 53.4 0.2 72.3 1 17.4 0.8 26.9 3.7 33.2 6.2 8.4 3.2 14.3 7.1 20.6 13.4 6.3 6.3 10.1 12.2 13.4 20.6 2.5 6.3 5.4 15.8 6.2 33.2 0.9 18.9 1 24.5 1 72.3s-0.2 53.4-1 72.3c-0.8 17.4-3.7 26.9-6.2 33.2 -3.2 8.4-7.1 14.3-13.4 20.6 -6.3 6.3-12.2 10.1-20.6 13.4 -6.3 2.5-15.8 5.4-33.2 6.2 -18.9 0.9-24.5 1-72.3 1s-53.4-0.2-72.3-1c-17.4-0.8-26.9-3.7-33.2-6.2 -8.4-3.2-14.3-7.1-20.6-13.4 -6.3-6.3-10.1-12.2-13.4-20.6 -2.5-6.3-5.4-15.8-6.2-33.2 -0.9-18.9-1-24.5-1-72.3s0.2-53.4 1-72.3c0.8-17.4 3.7-26.9 6.2-33.2 3.2-8.4 7.1-14.3 13.4-20.6 6.3-6.3 12.2-10.1 20.6-13.4 6.3-2.5 15.8-5.4 33.2-6.2C202.6 109.5 208.2 109.3 256 109.3M256 77.1c-48.6 0-54.7 0.2-73.8 1.1 -19 0.9-32.1 3.9-43.4 8.3 -11.8 4.6-21.7 10.7-31.7 20.6 -9.9 9.9-16.1 19.9-20.6 31.7 -4.4 11.4-7.4 24.4-8.3 43.4 -0.9 19.1-1.1 25.2-1.1 73.8 0 48.6 0.2 54.7 1.1 73.8 0.9 19 3.9 32.1 8.3 43.4 4.6 11.8 10.7 21.7 20.6 31.7 9.9 9.9 19.9 16.1 31.7 20.6 11.4 4.4 24.4 7.4 43.4 8.3 19.1 0.9 25.2 1.1 73.8 1.1s54.7-0.2 73.8-1.1c19-0.9 32.1-3.9 43.4-8.3 11.8-4.6 21.7-10.7 31.7-20.6 9.9-9.9 16.1-19.9 20.6-31.7 4.4-11.4 7.4-24.4 8.3-43.4 0.9-19.1 1.1-25.2 1.1-73.8s-0.2-54.7-1.1-73.8c-0.9-19-3.9-32.1-8.3-43.4 -4.6-11.8-10.7-21.7-20.6-31.7 -9.9-9.9-19.9-16.1-31.7-20.6 -11.4-4.4-24.4-7.4-43.4-8.3C310.7 77.3 304.6 77.1 256 77.1L256 77.1z"></path>
@@ -95,5 +98,8 @@
                 </div>
             </div>
         </div>
+
+
+    </div>
 </body>
 </html>
