Remove phone number from contact, add email link

--- a/resources.html
+++ b/resources.html
@@ -71,15 +71,8 @@
             </div>
             <div id="flex-footer-el-2">
                 <div style="font-size:25px"><b>CONTACT US</b></div>
-                <div class="phone" style="display:flex;flex-wrap:wrap">
 
-                    <img src="img/Phone.png" width="25" height="25" align="middle" />
-
-
-                    Phone: +1 859-985-3000
-
-                </div>
-                <div class="email"><img src="img/email.png" width="25" height="25" align="middle" />  Email: bereacollegemakerspace@gmail.com </div>
+                <div class="email"><img src="img/email.png" width="25" height="25" align="middle" />  Email: <a href="mailto:bereacollegemakerspace@gmail.com"><bereacollegemakerspace@gmail.com</a> </div>
                 <div class="college-name"><img src="img/add.png" width="25" height="25" align="middle" />  Address: Berea College</div>
                 <div class="address-line" style="padding-left:130px">Danforth Technology Building</div>
                 <div class="address-line" style="padding-left:130px">126 N. Main St</div>
