Remove redundant CSS in footer

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div id="flex-footer-el-2">
                 <p style="font-size:25px"><b>CONTACT US</b></p>
 
-                <p><img src="img/email.png" width="25" height="25" align="middle" />  Email: <a href="mailto:bereacollegemakerspace@gmail.com">bereacollegemakerspace@gmail.com</a></p>
+                <p><img src="img/email.png" width="25" height="25" align="middle" /> <a href="mailto:bereacollegemakerspace@gmail.com"> Email us</a></p>
                 <div ><img src="img/add.png" width="25" height="25" align="middle" /> Berea College</div>
                 <p>Danforth Technology Building</p>
                 <p>126 N. Main St</p>
