--- a/resources.html
+++ b/resources.html
@@ -61,24 +61,11 @@
     </script>
 
 
-    <div id="footer">
-        <div class="flex-footer">
+    <div id="footer" class="flex-footer">
             <div id="flex-footer-el-1">
                 <div class="logo" style="font-size:25px;"> <img src="img\Duck.png" width="100" height="100" align="middle" /> <b>BEREA COLLEGE MAKERSPACE </b></div>
                 <div class="home"><a href="index.html" style="text-align: right; color: white; padding: 109px">HOME</a> </div>
                 <div class="resources13"> <a href="resources.html" style="text-align:right; color:white; padding:109px"> RESOURCES</a></div>
-
-            </div>
-            <div id="flex-footer-el-2">
-                <div style="font-size:25px"><b>CONTACT US</b></div>
-
-                <div class="email"><img src="img/email.png" width="25" height="25" align="middle" />  Email: <a href="mailto:bereacollegemakerspace@gmail.com"><bereacollegemakerspace@gmail.com</a> </div>
-                <div class="college-name"><img src="img/add.png" width="25" height="25" align="middle" />  Address: Berea College</div>
-                <div class="address-line" style="padding-left:130px">Danforth Technology Building</div>
-                <div class="address-line" style="padding-left:130px">126 N. Main St</div>
-                <div class="address-line" style="padding-left:130px">Berea, KY 40404</div>
-
-
 
                 <div style="display:flex;flex-wrap:wrap; padding-left:130px">
                     <a href="https://www.instagram.com/bcmakerspace/?hl=en" target="_blank" rel="noopener noreferrer" style="text-decoration:none;border:0;width:70px;height:36px;padding:2px;margin:5px;color:deepskyblue;border-radius:50%;background-color:#0d2744;">
@@ -89,9 +76,19 @@
                         </svg>
                     </a>
                 </div>
-            </div>
-        </div>
 
+            </div>
+            <div id="flex-footer-el-2">
+                <p style="font-size:25px"><b>CONTACT US</b></p>
+
+                <p><img src="img/email.png" width="25" height="25"  class="center"/> <a href="mailto:bereacollegemakerspace@gmail.com"> Email us</a></p>
+                <div ><img src="img/add.png" width="25" height="25" class="center"/> Berea College</div>
+                <p>Danforth Technology Building</p>
+                <p>126 N. Main St</p>
+                <p>Berea, KY 40404</p>
+
+ 
+            </div>
 
     </div>
 </body>
